# basic-tool-mac

./: .gitattributes  README.md  local_repository_test.md  tags
activemq/: activemq-build-roadmap.cpp
c++11/: c++11-build-problem.c  c++11-build-roadmap.cmake
c11/: c11-build-roadmap.cmake
cmake/: cmake-build-roadmap.cmake  practise_cmake_manually.md
cmake/architeture_compile_module/commonSeperatedApp/: submain_cmake_compile_problem.md
cmake/architeture_compile_module/commonSeperatedApp/apps/: CMakeLists.txt
cmake/architeture_compile_module/seperatedLibClass/: README.md
cmake/architeture_compile_module/sepratedMultiSrcFiles/: CMakeLists.txt  README.md
cmake/case_combat/includeSeperatedMultiSources/vscodeversion/: CMakeLists.txt
cmake/case_combat/includeSeperatedMultiSources/vscodeversion/apps/: banks_simulator_plus_main.cpp
cmake/case_combat/includeSeperatedMultiSources/vscodeversion/include/: customer.h  event.h  event_queue.h  random.h
cmake/clang_cpp_multi_cmake_txt/: README.md
cmake/clang_cpp_multi_cmake_txt/generalversion/: CMakeLists.txt
cmake/clang_cpp_multi_cmake_txt/generalversion/apps/: CMakeLists.txt
cmake/clang_cpp_multi_cmake_txt/generalversion/apps/apps_active/: CMakeLists.txt
cmake/clang_cpp_multi_cmake_txt/generalversion/common_external_library/: CMakeLists.txt
cmake/clang_cpp_multi_cmake_txt/generalversion/interface_test_bug/: CMakeLists.txt
cmake/clang_cpp_multi_cmake_txt/vscodeversion/: README.md
cmake/vscode_mac/: CMakeLists.txt  thefitbodyConfig.h.in
debug/: debug-build-roadmap.bzl  debug_c++11_vscode_manually_mac.md
debug/need_to_be_debug/vscode_BankSimulatorPlusPlus/: CMakeLists.txt  build_cmake_problem.md
debug/need_to_be_debug/vscode_BankSimulatorPlusPlus_makefile/: Makefile  build_cmake_problem.md
docker/: docker-build-roadmap.js
embeded_sepreated_clang/: embeded_sepreated_clang.md
gdb/: gdb-build-roadmap.cpp
git/: git-build-roadmap.cmake  push_an_existing_folder_command.cc  switch_git_email_address.md
kafka/: kafka-build-roadmap.asm
kafla/: kafka-build-roadmap.asm
leveldb/: leveldb-build-roadmap.cmake
linux/: _mac_brew_install_shellcheck_do_not_do_this.md  back_end_software_engineer.md  brew_uninstall_ghc.md  build_c++_backend_develop_on_mac.md  clean_mac_purgeable_space_via_remove_localsnapshots.md  color_plugins_vim.md  conclusions_tools_software_engineer.md  ctags_and_taglist_for_vim_on_mac_or_linux.md  debian11_manually_install_vim.md  debian_.vimrc  debian_.zshrc  debian_amd64_iso_download.md  debian_download_.ycm_extra_conf.py  debian_install_tools_parallels_onmac.md  debian_install_tools_virtualbox_on_mac.md  debian_manually_install_vim.md  debian_parallels_mac_problem.md  debina_ycm_clang_completer_without_libclang_.ycm_extra_conf.py  enlarge_vm_disk_space.md  fix_virtualbox_install_mac.md  fold_indent_vim.md  gdbpavim_pygdbp_via_vim.md  goto_define_for_vim.md  host_login_vmlinux_nat_ssh_port_forward.md  host_macos_login_vm_debian.md  install_shellcheck_on_mac_brew.md  mac_download_.ycm_extra_conf.py  manually_install_git_into_debian.md  manually_install_shellcheck_deps.md  manually_install_shellcheck_on_mac_or_linux.md  manually_install_vim_on_mac_support_python3.md  manually_install_vundle_on_mac_or_linux.md  manually_install_youcompleteme_for_mac_or_linux.md  manually_install_zsh_ohmyzsh.md  manually_make_vim_debian11_problem.md  my_code_checklist_before_review.md  nerdtree_for_vim.md  repair_extensions_and_private_networks.md  roll_back_python3_to_3_7.md  samba_share_macos_with_debian.md  (+13 more)
makefile/: makefile-build-roadmap.cpp
makefile/onlyOneSimpleSourceFile/: Makefile  fitbodyapp.cpp
manually/: README.md
mongodb/: mongodb-download-roadmap.c  mongodb-problem-build.cmake
mysql/: mysql-build-problem-12k.rb  mysql-build-problem-358k.sh  mysql-build-problem.cpp  mysql-build-roadmap.cpp
nginx/: nginx-build-roadmap.rb
rabbitmq/: rabbitmp-build-roadmap.cpp
redis/: redis-build-roadmap.rb
rocketmq/: rocketmp-build-roadmap.cpp  rocketmq-build-roadmap.cpp
ssh/: ssh-build-roadmap.tcl
terminal/: fix_accidentally_upgrade_npm.md  mac.clang-format  mac.vimrc  mac.zshrc  push_issues_for_open_project.md  push_requests_for_open_project.md
terminal/architeture_compile_module/cmake_version/mainSub_terminal/: CMakeLists.txt  terminal_compile_command.md
update_software_mac/: update_xcode_and_macbook_software_trouble.md
vscode/: a_best_setup_c++11_debugger_vscode_mac.md  debug_problem.md  fix_all_delete_extension_for_vscode.md  fix_java8_for_IntelliJIdea.md  fix_not_support_java8_for_eclipse.md  launch_pk_attach_launchjson_vscode_manually.md  problems_during_setup_c++11_debug_vscode_mac.md  settings.json
vscode/build_compile_debug_case_combat/onlyOneSimpleSourceFile/cmakeversion/: CMakeLists.txt  CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.md  cmake_compile_problem.md  practise_cmake_manually.md  thefitbody.cpp  thefitbodyConfig.h  thefitbodyConfig.h.in
vscode/build_compile_debug_case_combat/onlyOneSimpleSourceFile/cmakeversion/debug/: CMakeCache.txt
vscode/build_compile_debug_case_combat/onlyOneSimpleSourceFile/cmakeversion/hello-vsc/: CMakeLists.txt  cmake_compile_problem.md  hello_vsc  hello_vsc.cpp
vscode/build_compile_debug_case_combat/onlyOneSimpleSourceFile/cmakeversion/practiseCMake/: Pet.cpp  vscode_cmake_setup_problem.md
vscode/build_compile_debug_case_combat/onlyOneSimpleSourceFile/cmakeversion/practiseCMake/include/: Pet.h
vscode/build_compile_debug_case_combat/onlyOneSimpleSourceFile/cmakeversion/release/: CMakeCache.txt
vscode/build_compile_debug_case_combat/onlyOneSimpleSourceFile/cmakeversion/vsCodeCMake/practiseCMake/: CMakeLists.txt  Pet.cpp  main.cpp  vscode_cmake_setup_problem.md
vscode/build_compile_debug_case_combat/onlyOneSimpleSourceFile/cmakeversion/vsCodeCMake/practiseCMake/include/: Pet.h
vscode/build_compile_debug_case_combat/sepratedMultiSrcFiles/mainSeparatedSources/cmakeversion/: CMakeLists.txt  README.md  catPet.cpp
vscode/c++11_general_config/: c_cpp_properties.json  settings.json
(+132 files in other folders)
